syntax = "proto3";
package models;
option go_package = "./models";

message TransactionAPI {

  string from_address = 1;
  string to_address = 2;
  string value = 3;
  string timestamp = 4;
  string hash = 5;
  uint64 block_number = 6;
  uint64 fee = 7;
}
